2010-03-25  yael aharon  <yael.aharon@nokia.com>

Reviewed by Laszlo Gombos.

        [Qt] Windowed netscape plugins don't work with QGraphicsWebView on Symbian
        https://bugs.webkit.org/show_bug.cgi?id=35112

        Add a proxy widget when loading a QWidget based plugin in a QGraphicsWebView.

        * plugins/symbian/PluginContainerSymbian.cpp:
        (PluginContainerSymbian::PluginContainerSymbian):
        (PluginContainerSymbian::focusInEvent):
        * plugins/symbian/PluginContainerSymbian.h:
        (WebCore::PluginContainerSymbian::proxy):
        * plugins/symbian/PluginViewSymbian.cpp:
        (WebCore::PluginView::updatePluginWidget):
        (WebCore::PluginView::platformStart):
        (WebCore::PluginView::platformDestroy):

Canonical link: https://commits.webkit.org/47840@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@56546 268f45cc-cd09-0410-ab3c-d52691b4dbfc